# notion-gcal

./: README.md  pyproject.toml  run.py
src/: gcal.py  notion.py  structs.py
