[tool.poetry]
name = "notion-gcal"
version = "0.1.0"
description = "Notion ❤️ GCalendar"
authors = ["Santiago <shpotes3@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.38.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.0"
notion-client = "^0.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipython = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
